# change_impact_analyzer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  cia.yml  release.yml
.windsurf/: mcp_config.json
.windsurf/workflows/: cia-audit.md  cia-blast.md  cia-graph.md  cia-init.md  cia-pr-summary.md  cia-refactor.md  cia-review.md  cia-risk.md  cia-suggest.md  cia-tests.md
docs/: api.md  cia-toolkit-top7.md  mcp-server-design.md  mcp-setup-guide.md  paper.bib  paper.md  tutorial.md  tutorial_retest_report.md  tutorial_test_findings.md
examples/sample_project/: .ciarc  README.md  __init__.py  main.py  models.py  utils.py
examples/sample_project/tests/: __init__.py  test_models.py  test_utils.py
mcp-configs/cline/: mcp_settings.json
mcp-configs/cursor/: mcp.json
mcp-configs/vscode/: mcp.json
scripts/: setup-mcp.py
src/cia/: __init__.py  __main__.py  cli.py  config.py
src/cia/analyzer/: __init__.py  change_detector.py  impact_analyzer.py  test_analyzer.py
src/cia/git/: __init__.py  git_integration.py  hooks.py
src/cia/graph/: __init__.py  call_graph.py  dependency_graph.py
src/cia/parser/: __init__.py  base.py  python_parser.py
src/cia/report/: __init__.py  html_reporter.py  json_reporter.py  markdown_reporter.py
src/cia/risk/: __init__.py  risk_factors.py  risk_scorer.py
src/cia_mcp/: __init__.py  __main__.py  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_edge_cases.py  test_integration.py
tests/test_analyzer/: test_impact_analyzer.py  test_test_analyzer.py
tests/test_ci/: __init__.py  test_workflows.py
tests/test_git/: __init__.py  test_change_detector.py  test_cli.py  test_git_integration.py  test_hooks.py
tests/test_graph/: test_call_graph.py  test_dependency_graph.py
tests/test_mcp/: test_server.py
tests/test_parser/: test_python_parser.py
tests/test_report/: __init__.py  test_html_reporter.py  test_json_reporter.py  test_markdown_reporter.py
tests/test_risk/: __init__.py  test_risk_factors.py  test_risk_scorer.py
