[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "change-impact-analyzer"
version = "0.1.0"
description = "Git-based tool that predicts the potential impact of code changes on other parts of the codebase before they are committed."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Change Impact Analyzer Contributors"},
]
keywords = ["git", "static-analysis", "code-impact", "dependency-graph", "change-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.1",
    "astroid>=3.0",
    "networkx>=3.1",
    "gitpython>=3.1",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
all = [
    "change-impact-analyzer[mcp,dev]",
]

[project.scripts]
cia = "cia.cli:main"
cia-mcp = "cia_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Eng-Elias/change_impact_analyzer"
Documentation = "https://github.com/Eng-Elias/change_impact_analyzer#readme"
Repository = "https://github.com/Eng-Elias/change_impact_analyzer"
Issues = "https://github.com/Eng-Elias/change_impact_analyzer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cia", "src/cia_mcp"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = ["_feature_flags"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"src/cia/report/html_reporter.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "astroid",
    "astroid.*",
    "networkx",
    "networkx.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cia --cov-report=term-missing"

[tool.coverage.run]
source = ["src/cia"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
